--- a/project-notebook.ipynb
+++ b/project-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a6f9c1f",
+   "id": "61e17560",
    "metadata": {},
    "source": [
     "# FIFA World Cup 2014 Stats Project"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "09c26018",
+   "execution_count": 10,
+   "id": "0597d56c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,14 @@
     "from bs4 import BeautifulSoup\n",
     "import ssl\n",
     "import re\n",
-    "import time"
+    "import time\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5f9f9527",
+   "id": "569f182e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ebcc0b0f",
+   "id": "f0febc93",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de469a8e",
+   "id": "34f6c171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e8972d75",
+   "execution_count": 6,
+   "id": "6ebb7849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,10 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "88916c55",
+   "execution_count": 11,
+   "id": "2414a0e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_57457/2088200790.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#     print(key, item)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#     print()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: I/O operation on closed file."
+     ]
+    }
+   ],
    "source": [
     "j = 0\n",
     "for item in info:\n",
@@ -228,8 +241,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aa34ee08",
+   "execution_count": 8,
+   "id": "c4b1098a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +316,14 @@
     "f.write('\\n\\n')\n",
     "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae38e379",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
